--- a/Birthday/Birthday.css
+++ b/Birthday/Birthday.css
@@ -25,7 +25,8 @@
   .vevo {
     float: left;
     margin-top: 10px;
-margin-bottom: 50px;
+margin-bottom: 90px;
+      margin-right:70px;
   }
 
   img {
